# vision_locomotion_go1

./: README.md
controller/: CMakeLists.txt  package.xml
controller/include/agile_locomotion/: comm.h  comm.lcm  lcm_server.h  quadruped.h  udp.h
controller/include/agile_locomotion/lcmcomm/: BmsCmd.hpp  BmsState.hpp  HighCmd.hpp  HighState.hpp  LowCmd.hpp  LowState.hpp
controller/models/blind/: mlp_1200.pt  prop_encoder_1200.pt
controller/src/: agile_locomotion.cpp  low_level.cpp
